force-app/src/objects/bugtr_mp__Bug__c.object
<CustomObject>
    <description>Object contains bug description, steps to recreation list of users who reported of this bug and status</description>
    <fields>
        <fullName>bugtr_mp__Bug_Name__c</fullName>
        <description>Bug Name</description>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bugtr_mp__Draft__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checkbox for assigning report to draft which will not be displayed.</description>
        <label>Draft</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bugtr_mp__Repro_Description__c</fullName>
        <label>Repro Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>bugtr_mp__Repro__c</fullName>
        <description>Steps to bug reproduction</description>
        <label>Repro</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>bugtr_mp__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Release In Progress</fullName>
                </value>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>No fix</fullName>
                </value>
                <value>
                    <fullName>Schedule</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>bugtr_mp__Summary__c</fullName>
        <label>Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>bugtr_mp__Tags__c</fullName>
        <label>Tags</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Javascript</fullName>
                </value>
                <value>
                    <fullName>Apex</fullName>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>Lightning</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>bugtr_mp__Workaround_Description__c</fullName>
        <label>Workaround Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>bugtr_mp__Workaround__c</fullName>
        <description>Steps to avoid bug show up</description>
        <label>Workaround</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Known Issue</label>
    <listViews>
        <fullName>bugtr_mp__All</fullName>
        <columns>NAME</columns>
        <columns>bugtr_mp__Bug_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>KI-{0000000}</displayFormat>
        <label>Bug Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Known Issues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>